Project6/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    WHITESPACE
    COMMENT

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> <empty>
Rule 4     statement -> expr ;
Rule 5     statement -> declaration ;
Rule 6     statement -> block
Rule 7     statement -> if_block
Rule 8     statement -> while_loop
Rule 9     statement -> break ;
Rule 10    statement -> ;
Rule 11    block -> OPEN_BLOCK statements CLOSE_BLOCK
Rule 12    if_block -> COMMAND_IF ( expr ) statement
Rule 13    if_block -> COMMAND_IF ( expr ) statement COMMAND_ELSE statement
Rule 14    break -> COMMAND_BREAK
Rule 15    while_loop -> COMMAND_WHILE ( expr ) statement
Rule 16    declaration -> TYPE ID
Rule 17    declaration -> TYPE ID = expr
Rule 18    declaration -> ARRAY_TYPE ( TYPE ) ID
Rule 19    declaration -> ARRAY_TYPE ( TYPE ) ID = expr
Rule 20    declaration -> STRING_TYPE ID
Rule 21    declaration -> STRING_TYPE ID = expr
Rule 22    expr -> [ elements ]
Rule 23    expr -> [ ]
Rule 24    expr -> STRING_LITERAL
Rule 25    elements -> expr
Rule 26    elements -> elements , expr
Rule 27    expr -> expr AR_METHOD_SIZE ( )
Rule 28    expr -> expr AR_METHOD_SIZE ( expr )
Rule 29    expr -> expr AR_METHOD_RESIZE ( arguments )
Rule 30    expr -> variable [ expr ]
Rule 31    expr -> variable [ expr ] = expr
Rule 32    expr -> expr + expr
Rule 33    expr -> expr - expr
Rule 34    expr -> expr * expr
Rule 35    expr -> expr / expr
Rule 36    expr -> expr ASSIGN_ADD expr
Rule 37    expr -> expr ASSIGN_SUB expr
Rule 38    expr -> expr ASSIGN_MULT expr
Rule 39    expr -> expr ASSIGN_DIV expr
Rule 40    expr -> ( expr )
Rule 41    expr -> expr COMP_EQU expr
Rule 42    expr -> expr COMP_NEQU expr
Rule 43    expr -> expr < expr
Rule 44    expr -> expr COMP_LTE expr
Rule 45    expr -> expr > expr
Rule 46    expr -> expr COMP_GTE expr
Rule 47    expr -> expr BOOL_AND expr
Rule 48    expr -> expr BOOL_OR expr
Rule 49    expr -> ! expr
Rule 50    expr -> COMMAND_PRINT ( arguments )
Rule 51    arguments -> expr
Rule 52    arguments -> arguments , expr
Rule 53    expr -> COMMAND_RANDOM ( expr )
Rule 54    expr -> VAL_LITERAL
Rule 55    expr -> - VAL_LITERAL
Rule 56    expr -> CHAR_LITERAL
Rule 57    expr -> variable
Rule 58    expr -> - variable
Rule 59    expr -> variable = expr
Rule 60    variable -> ID

Terminals, with rules where they appear

!                    : 49
(                    : 12 13 15 18 19 27 28 29 40 50 53
)                    : 12 13 15 18 19 27 28 29 40 50 53
*                    : 34
+                    : 32
,                    : 26 52
-                    : 33 55 58
/                    : 35
;                    : 4 5 9 10
<                    : 43
=                    : 17 19 21 31 59
>                    : 45
ARRAY_TYPE           : 18 19
AR_METHOD_RESIZE     : 29
AR_METHOD_SIZE       : 27 28
ASSIGN_ADD           : 36
ASSIGN_DIV           : 39
ASSIGN_MULT          : 38
ASSIGN_SUB           : 37
BOOL_AND             : 47
BOOL_OR              : 48
CHAR_LITERAL         : 56
CLOSE_BLOCK          : 11
COMMAND_BREAK        : 14
COMMAND_ELSE         : 13
COMMAND_IF           : 12 13
COMMAND_PRINT        : 50
COMMAND_RANDOM       : 53
COMMAND_WHILE        : 15
COMMENT              : 
COMP_EQU             : 41
COMP_GTE             : 46
COMP_LTE             : 44
COMP_NEQU            : 42
ID                   : 16 17 18 19 20 21 60
OPEN_BLOCK           : 11
STRING_LITERAL       : 24
STRING_TYPE          : 20 21
TYPE                 : 16 17 18 19
VAL_LITERAL          : 54 55
WHITESPACE           : 
[                    : 22 23 30 31
]                    : 22 23 30 31
error                : 

Nonterminals, with rules where they appear

arguments            : 29 50 52
block                : 6
break                : 9
declaration          : 5
elements             : 22 26
expr                 : 4 12 13 15 17 19 21 25 26 27 28 28 29 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 51 52 53 59
if_block             : 7
program              : 0
statement            : 2 12 13 13 15
statements           : 1 2 11
variable             : 30 31 57 58 59
while_loop           : 8

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statements statement
    (3) statements -> .

    ;               reduce using rule 3 (statements -> .)
    [               reduce using rule 3 (statements -> .)
    STRING_LITERAL  reduce using rule 3 (statements -> .)
    (               reduce using rule 3 (statements -> .)
    !               reduce using rule 3 (statements -> .)
    COMMAND_PRINT   reduce using rule 3 (statements -> .)
    COMMAND_RANDOM  reduce using rule 3 (statements -> .)
    VAL_LITERAL     reduce using rule 3 (statements -> .)
    -               reduce using rule 3 (statements -> .)
    CHAR_LITERAL    reduce using rule 3 (statements -> .)
    TYPE            reduce using rule 3 (statements -> .)
    ARRAY_TYPE      reduce using rule 3 (statements -> .)
    STRING_TYPE     reduce using rule 3 (statements -> .)
    OPEN_BLOCK      reduce using rule 3 (statements -> .)
    COMMAND_IF      reduce using rule 3 (statements -> .)
    COMMAND_WHILE   reduce using rule 3 (statements -> .)
    COMMAND_BREAK   reduce using rule 3 (statements -> .)
    ID              reduce using rule 3 (statements -> .)
    $end            reduce using rule 3 (statements -> .)

    program                        shift and go to state 1
    statements                     shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (2) statements -> statements . statement
    (4) statement -> . expr ;
    (5) statement -> . declaration ;
    (6) statement -> . block
    (7) statement -> . if_block
    (8) statement -> . while_loop
    (9) statement -> . break ;
    (10) statement -> . ;
    (22) expr -> . [ elements ]
    (23) expr -> . [ ]
    (24) expr -> . STRING_LITERAL
    (27) expr -> . expr AR_METHOD_SIZE ( )
    (28) expr -> . expr AR_METHOD_SIZE ( expr )
    (29) expr -> . expr AR_METHOD_RESIZE ( arguments )
    (30) expr -> . variable [ expr ]
    (31) expr -> . variable [ expr ] = expr
    (32) expr -> . expr + expr
    (33) expr -> . expr - expr
    (34) expr -> . expr * expr
    (35) expr -> . expr / expr
    (36) expr -> . expr ASSIGN_ADD expr
    (37) expr -> . expr ASSIGN_SUB expr
    (38) expr -> . expr ASSIGN_MULT expr
    (39) expr -> . expr ASSIGN_DIV expr
    (40) expr -> . ( expr )
    (41) expr -> . expr COMP_EQU expr
    (42) expr -> . expr COMP_NEQU expr
    (43) expr -> . expr < expr
    (44) expr -> . expr COMP_LTE expr
    (45) expr -> . expr > expr
    (46) expr -> . expr COMP_GTE expr
    (47) expr -> . expr BOOL_AND expr
    (48) expr -> . expr BOOL_OR expr
    (49) expr -> . ! expr
    (50) expr -> . COMMAND_PRINT ( arguments )
    (53) expr -> . COMMAND_RANDOM ( expr )
    (54) expr -> . VAL_LITERAL
    (55) expr -> . - VAL_LITERAL
    (56) expr -> . CHAR_LITERAL
    (57) expr -> . variable
    (58) expr -> . - variable
    (59) expr -> . variable = expr
    (16) declaration -> . TYPE ID
    (17) declaration -> . TYPE ID = expr
    (18) declaration -> . ARRAY_TYPE ( TYPE ) ID
    (19) declaration -> . ARRAY_TYPE ( TYPE ) ID = expr
    (20) declaration -> . STRING_TYPE ID
    (21) declaration -> . STRING_TYPE ID = expr
    (11) block -> . OPEN_BLOCK statements CLOSE_BLOCK
    (12) if_block -> . COMMAND_IF ( expr ) statement
    (13) if_block -> . COMMAND_IF ( expr ) statement COMMAND_ELSE statement
    (15) while_loop -> . COMMAND_WHILE ( expr ) statement
    (14) break -> . COMMAND_BREAK
    (60) variable -> . ID

    $end            reduce using rule 1 (program -> statements .)
    ;               shift and go to state 5
    [               shift and go to state 11
    STRING_LITERAL  shift and go to state 12
    (               shift and go to state 13
    !               shift and go to state 16
    COMMAND_PRINT   shift and go to state 17
    COMMAND_RANDOM  shift and go to state 18
    VAL_LITERAL     shift and go to state 19
    -               shift and go to state 15
    CHAR_LITERAL    shift and go to state 20
    TYPE            shift and go to state 21
    ARRAY_TYPE      shift and go to state 23
    STRING_TYPE     shift and go to state 24
    OPEN_BLOCK      shift and go to state 25
    COMMAND_IF      shift and go to state 26
    COMMAND_WHILE   shift and go to state 27
    COMMAND_BREAK   shift and go to state 28
    ID              shift and go to state 22

    statement                      shift and go to state 3
    expr                           shift and go to state 4
    declaration                    shift and go to state 6
    block                          shift and go to state 7
    if_block                       shift and go to state 8
    while_loop                     shift and go to state 9
    break                          shift and go to state 10
    variable                       shift and go to state 14

state 3

    (2) statements -> statements statement .

    ;               reduce using rule 2 (statements -> statements statement .)
    [               reduce using rule 2 (statements -> statements statement .)
    STRING_LITERAL  reduce using rule 2 (statements -> statements statement .)
    (               reduce using rule 2 (statements -> statements statement .)
    !               reduce using rule 2 (statements -> statements statement .)
    COMMAND_PRINT   reduce using rule 2 (statements -> statements statement .)
    COMMAND_RANDOM  reduce using rule 2 (statements -> statements statement .)
    VAL_LITERAL     reduce using rule 2 (statements -> statements statement .)
    -               reduce using rule 2 (statements -> statements statement .)
    CHAR_LITERAL    reduce using rule 2 (statements -> statements statement .)
    TYPE            reduce using rule 2 (statements -> statements statement .)
    ARRAY_TYPE      reduce using rule 2 (statements -> statements statement .)
    STRING_TYPE     reduce using rule 2 (statements -> statements statement .)
    OPEN_BLOCK      reduce using rule 2 (statements -> statements statement .)
    COMMAND_IF      reduce using rule 2 (statements -> statements statement .)
    COMMAND_WHILE   reduce using rule 2 (statements -> statements statement .)
    COMMAND_BREAK   reduce using rule 2 (statements -> statements statement .)
    ID              reduce using rule 2 (statements -> statements statement .)
    $end            reduce using rule 2 (statements -> statements statement .)
    CLOSE_BLOCK     reduce using rule 2 (statements -> statements statement .)


state 4

    (4) statement -> expr . ;
    (27) expr -> expr . AR_METHOD_SIZE ( )
    (28) expr -> expr . AR_METHOD_SIZE ( expr )
    (29) expr -> expr . AR_METHOD_RESIZE ( arguments )
    (32) expr -> expr . + expr
    (33) expr -> expr . - expr
    (34) expr -> expr . * expr
    (35) expr -> expr . / expr
    (36) expr -> expr . ASSIGN_ADD expr
    (37) expr -> expr . ASSIGN_SUB expr
    (38) expr -> expr . ASSIGN_MULT expr
    (39) expr -> expr . ASSIGN_DIV expr
    (41) expr -> expr . COMP_EQU expr
    (42) expr -> expr . COMP_NEQU expr
    (43) expr -> expr . < expr
    (44) expr -> expr . COMP_LTE expr
    (45) expr -> expr . > expr
    (46) expr -> expr . COMP_GTE expr
    (47) expr -> expr . BOOL_AND expr
    (48) expr -> expr . BOOL_OR expr

    ;               shift and go to state 29
    AR_METHOD_SIZE  shift and go to state 30
    AR_METHOD_RESIZE shift and go to state 31
    +               shift and go to state 32
    -               shift and go to state 33
    *               shift and go to state 34
    /               shift and go to state 35
    ASSIGN_ADD      shift and go to state 36
    ASSIGN_SUB      shift and go to state 37
    ASSIGN_MULT     shift and go to state 38
    ASSIGN_DIV      shift and go to state 39
    COMP_EQU        shift and go to state 40
    COMP_NEQU       shift and go to state 41
    <               shift and go to state 42
    COMP_LTE        shift and go to state 43
    >               shift and go to state 44
    COMP_GTE        shift and go to state 45
    BOOL_AND        shift and go to state 46
    BOOL_OR         shift and go to state 47


state 5

    (10) statement -> ; .

    ;               reduce using rule 10 (statement -> ; .)
    [               reduce using rule 10 (statement -> ; .)
    STRING_LITERAL  reduce using rule 10 (statement -> ; .)
    (               reduce using rule 10 (statement -> ; .)
    !               reduce using rule 10 (statement -> ; .)
    COMMAND_PRINT   reduce using rule 10 (statement -> ; .)
    COMMAND_RANDOM  reduce using rule 10 (statement -> ; .)
    VAL_LITERAL     reduce using rule 10 (statement -> ; .)
    -               reduce using rule 10 (statement -> ; .)
    CHAR_LITERAL    reduce using rule 10 (statement -> ; .)
    TYPE            reduce using rule 10 (statement -> ; .)
    ARRAY_TYPE      reduce using rule 10 (statement -> ; .)
    STRING_TYPE     reduce using rule 10 (statement -> ; .)
    OPEN_BLOCK      reduce using rule 10 (statement -> ; .)
    COMMAND_IF      reduce using rule 10 (statement -> ; .)
    COMMAND_WHILE   reduce using rule 10 (statement -> ; .)
    COMMAND_BREAK   reduce using rule 10 (statement -> ; .)
    ID              reduce using rule 10 (statement -> ; .)
    $end            reduce using rule 10 (statement -> ; .)
    CLOSE_BLOCK     reduce using rule 10 (statement -> ; .)
    COMMAND_ELSE    reduce using rule 10 (statement -> ; .)


state 6

    (5) statement -> declaration . ;

    ;               shift and go to state 48


state 7

    (6) statement -> block .

    ;               reduce using rule 6 (statement -> block .)
    [               reduce using rule 6 (statement -> block .)
    STRING_LITERAL  reduce using rule 6 (statement -> block .)
    (               reduce using rule 6 (statement -> block .)
    !               reduce using rule 6 (statement -> block .)
    COMMAND_PRINT   reduce using rule 6 (statement -> block .)
    COMMAND_RANDOM  reduce using rule 6 (statement -> block .)
    VAL_LITERAL     reduce using rule 6 (statement -> block .)
    -               reduce using rule 6 (statement -> block .)
    CHAR_LITERAL    reduce using rule 6 (statement -> block .)
    TYPE            reduce using rule 6 (statement -> block .)
    ARRAY_TYPE      reduce using rule 6 (statement -> block .)
    STRING_TYPE     reduce using rule 6 (statement -> block .)
    OPEN_BLOCK      reduce using rule 6 (statement -> block .)
    COMMAND_IF      reduce using rule 6 (statement -> block .)
    COMMAND_WHILE   reduce using rule 6 (statement -> block .)
    COMMAND_BREAK   reduce using rule 6 (statement -> block .)
    ID              reduce using rule 6 (statement -> block .)
    $end            reduce using rule 6 (statement -> block .)
    CLOSE_BLOCK     reduce using rule 6 (statement -> block .)
    COMMAND_ELSE    reduce using rule 6 (statement -> block .)


state 8

    (7) statement -> if_block .

    ;               reduce using rule 7 (statement -> if_block .)
    [               reduce using rule 7 (statement -> if_block .)
    STRING_LITERAL  reduce using rule 7 (statement -> if_block .)
    (               reduce using rule 7 (statement -> if_block .)
    !               reduce using rule 7 (statement -> if_block .)
    COMMAND_PRINT   reduce using rule 7 (statement -> if_block .)
    COMMAND_RANDOM  reduce using rule 7 (statement -> if_block .)
    VAL_LITERAL     reduce using rule 7 (statement -> if_block .)
    -               reduce using rule 7 (statement -> if_block .)
    CHAR_LITERAL    reduce using rule 7 (statement -> if_block .)
    TYPE            reduce using rule 7 (statement -> if_block .)
    ARRAY_TYPE      reduce using rule 7 (statement -> if_block .)
    STRING_TYPE     reduce using rule 7 (statement -> if_block .)
    OPEN_BLOCK      reduce using rule 7 (statement -> if_block .)
    COMMAND_IF      reduce using rule 7 (statement -> if_block .)
    COMMAND_WHILE   reduce using rule 7 (statement -> if_block .)
    COMMAND_BREAK   reduce using rule 7 (statement -> if_block .)
    ID              reduce using rule 7 (statement -> if_block .)
    $end            reduce using rule 7 (statement -> if_block .)
    CLOSE_BLOCK     reduce using rule 7 (statement -> if_block .)
    COMMAND_ELSE    reduce using rule 7 (statement -> if_block .)


state 9

    (8) statement -> while_loop .

    ;               reduce using rule 8 (statement -> while_loop .)
    [               reduce using rule 8 (statement -> while_loop .)
    STRING_LITERAL  reduce using rule 8 (statement -> while_loop .)
    (               reduce using rule 8 (statement -> while_loop .)
    !               reduce using rule 8 (statement -> while_loop .)
    COMMAND_PRINT   reduce using rule 8 (statement -> while_loop .)
    COMMAND_RANDOM  reduce using rule 8 (statement -> while_loop .)
    VAL_LITERAL     reduce using rule 8 (statement -> while_loop .)
    -               reduce using rule 8 (statement -> while_loop .)
    CHAR_LITERAL    reduce using rule 8 (statement -> while_loop .)
    TYPE            reduce using rule 8 (statement -> while_loop .)
    ARRAY_TYPE      reduce using rule 8 (statement -> while_loop .)
    STRING_TYPE     reduce using rule 8 (statement -> while_loop .)
    OPEN_BLOCK      reduce using rule 8 (statement -> while_loop .)
    COMMAND_IF      reduce using rule 8 (statement -> while_loop .)
    COMMAND_WHILE   reduce using rule 8 (statement -> while_loop .)
    COMMAND_BREAK   reduce using rule 8 (statement -> while_loop .)
    ID              reduce using rule 8 (statement -> while_loop .)
    $end            reduce using rule 8 (statement -> while_loop .)
    CLOSE_BLOCK     reduce using rule 8 (statement -> while_loop .)
    COMMAND_ELSE    reduce using rule 8 (statement -> while_loop .)


state 10

    (9) statement -> break . ;

    ;               shift and go to state 49


state 11

    (22) expr -> [ . elements ]
    (23) expr -> [ . ]
    (25) elements -> . expr
    (26) elements -> . elements , expr
    (22) expr -> . [ elements ]
    (23) expr -> . [ ]
    (24) expr -> . STRING_LITERAL
    (27) expr -> . expr AR_METHOD_SIZE ( )
    (28) expr -> . expr AR_METHOD_SIZE ( expr )
    (29) expr -> . expr AR_METHOD_RESIZE ( arguments )
    (30) expr -> . variable [ expr ]
    (31) expr -> . variable [ expr ] = expr
    (32) expr -> . expr + expr
    (33) expr -> . expr - expr
    (34) expr -> . expr * expr
    (35) expr -> . expr / expr
    (36) expr -> . expr ASSIGN_ADD expr
    (37) expr -> . expr ASSIGN_SUB expr
    (38) expr -> . expr ASSIGN_MULT expr
    (39) expr -> . expr ASSIGN_DIV expr
    (40) expr -> . ( expr )
    (41) expr -> . expr COMP_EQU expr
    (42) expr -> . expr COMP_NEQU expr
    (43) expr -> . expr < expr
    (44) expr -> . expr COMP_LTE expr
    (45) expr -> . expr > expr
    (46) expr -> . expr COMP_GTE expr
    (47) expr -> . expr BOOL_AND expr
    (48) expr -> . expr BOOL_OR expr
    (49) expr -> . ! expr
    (50) expr -> . COMMAND_PRINT ( arguments )
    (53) expr -> . COMMAND_RANDOM ( expr )
    (54) expr -> . VAL_LITERAL
    (55) expr -> . - VAL_LITERAL
    (56) expr -> . CHAR_LITERAL
    (57) expr -> . variable
    (58) expr -> . - variable
    (59) expr -> . variable = expr
    (60) variable -> . ID

    ]               shift and go to state 51
    [               shift and go to state 11
    STRING_LITERAL  shift and go to state 12
    (               shift and go to state 13
    !               shift and go to state 16
    COMMAND_PRINT   shift and go to state 17
    COMMAND_RANDOM  shift and go to state 18
    VAL_LITERAL     shift and go to state 19
    -               shift and go to state 15
    CHAR_LITERAL    shift and go to state 20
    ID              shift and go to state 22

    elements                       shift and go to state 50
    expr                           shift and go to state 52
    variable                       shift and go to state 14

state 12

    (24) expr -> STRING_LITERAL .

    ;               reduce using rule 24 (expr -> STRING_LITERAL .)
    AR_METHOD_SIZE  reduce using rule 24 (expr -> STRING_LITERAL .)
    AR_METHOD_RESIZE reduce using rule 24 (expr -> STRING_LITERAL .)
    +               reduce using rule 24 (expr -> STRING_LITERAL .)
    -               reduce using rule 24 (expr -> STRING_LITERAL .)
    *               reduce using rule 24 (expr -> STRING_LITERAL .)
    /               reduce using rule 24 (expr -> STRING_LITERAL .)
    ASSIGN_ADD      reduce using rule 24 (expr -> STRING_LITERAL .)
    ASSIGN_SUB      reduce using rule 24 (expr -> STRING_LITERAL .)
    ASSIGN_MULT     reduce using rule 24 (expr -> STRING_LITERAL .)
    ASSIGN_DIV      reduce using rule 24 (expr -> STRING_LITERAL .)
    COMP_EQU        reduce using rule 24 (expr -> STRING_LITERAL .)
    COMP_NEQU       reduce using rule 24 (expr -> STRING_LITERAL .)
    <               reduce using rule 24 (expr -> STRING_LITERAL .)
    COMP_LTE        reduce using rule 24 (expr -> STRING_LITERAL .)
    >               reduce using rule 24 (expr -> STRING_LITERAL .)
    COMP_GTE        reduce using rule 24 (expr -> STRING_LITERAL .)
    BOOL_AND        reduce using rule 24 (expr -> STRING_LITERAL .)
    BOOL_OR         reduce using rule 24 (expr -> STRING_LITERAL .)
    ]               reduce using rule 24 (expr -> STRING_LITERAL .)
    ,               reduce using rule 24 (expr -> STRING_LITERAL .)
    )               reduce using rule 24 (expr -> STRING_LITERAL .)


state 13

    (40) expr -> ( . expr )
    (22) expr -> . [ elements ]
    (23) expr -> . [ ]
    (24) expr -> . STRING_LITERAL
    (27) expr -> . expr AR_METHOD_SIZE ( )
    (28) expr -> . expr AR_METHOD_SIZE ( expr )
    (29) expr -> . expr AR_METHOD_RESIZE ( arguments )
    (30) expr -> . variable [ expr ]
    (31) expr -> . variable [ expr ] = expr
    (32) expr -> . expr + expr
    (33) expr -> . expr - expr
    (34) expr -> . expr * expr
    (35) expr -> . expr / expr
    (36) expr -> . expr ASSIGN_ADD expr
    (37) expr -> . expr ASSIGN_SUB expr
    (38) expr -> . expr ASSIGN_MULT expr
    (39) expr -> . expr ASSIGN_DIV expr
    (40) expr -> . ( expr )
    (41) expr -> . expr COMP_EQU expr
    (42) expr -> . expr COMP_NEQU expr
    (43) expr -> . expr < expr
    (44) expr -> . expr COMP_LTE expr
    (45) expr -> . expr > expr
    (46) expr -> . expr COMP_GTE expr
    (47) expr -> . expr BOOL_AND expr
    (48) expr -> . expr BOOL_OR expr
    (49) expr -> . ! expr
    (50) expr -> . COMMAND_PRINT ( arguments )
    (53) expr -> . COMMAND_RANDOM ( expr )
    (54) expr -> . VAL_LITERAL
    (55) expr -> . - VAL_LITERAL
    (56) expr -> . CHAR_LITERAL
    (57) expr -> . variable
    (58) expr -> . - variable
    (59) expr -> . variable = expr
    (60) variable -> . ID

    [               shift and go to state 11
    STRING_LITERAL  shift and go to state 12
    (               shift and go to state 13
    !               shift and go to state 16
    COMMAND_PRINT   shift and go to state 17
    COMMAND_RANDOM  shift and go to state 18
    VAL_LITERAL     shift and go to state 19
    -               shift and go to state 15
    CHAR_LITERAL    shift and go to state 20
    ID              shift and go to state 22

    expr                           shift and go to state 53
    variable                       shift and go to state 14

state 14

    (30) expr -> variable . [ expr ]
    (31) expr -> variable . [ expr ] = expr
    (57) expr -> variable .
    (59) expr -> variable . = expr

    [               shift and go to state 54
    ;               reduce using rule 57 (expr -> variable .)
    AR_METHOD_SIZE  reduce using rule 57 (expr -> variable .)
    AR_METHOD_RESIZE reduce using rule 57 (expr -> variable .)
    +               reduce using rule 57 (expr -> variable .)
    -               reduce using rule 57 (expr -> variable .)
    *               reduce using rule 57 (expr -> variable .)
    /               reduce using rule 57 (expr -> variable .)
    ASSIGN_ADD      reduce using rule 57 (expr -> variable .)
    ASSIGN_SUB      reduce using rule 57 (expr -> variable .)
    ASSIGN_MULT     reduce using rule 57 (expr -> variable .)
    ASSIGN_DIV      reduce using rule 57 (expr -> variable .)
    COMP_EQU        reduce using rule 57 (expr -> variable .)
    COMP_NEQU       reduce using rule 57 (expr -> variable .)
    <               reduce using rule 57 (expr -> variable .)
    COMP_LTE        reduce using rule 57 (expr -> variable .)
    >               reduce using rule 57 (expr -> variable .)
    COMP_GTE        reduce using rule 57 (expr -> variable .)
    BOOL_AND        reduce using rule 57 (expr -> variable .)
    BOOL_OR         reduce using rule 57 (expr -> variable .)
    ]               reduce using rule 57 (expr -> variable .)
    ,               reduce using rule 57 (expr -> variable .)
    )               reduce using rule 57 (expr -> variable .)
    =               shift and go to state 55


state 15

    (55) expr -> - . VAL_LITERAL
    (58) expr -> - . variable
    (60) variable -> . ID

    VAL_LITERAL     shift and go to state 56
    ID              shift and go to state 22

    variable                       shift and go to state 57

state 16

    (49) expr -> ! . expr
    (22) expr -> . [ elements ]
    (23) expr -> . [ ]
    (24) expr -> . STRING_LITERAL
    (27) expr -> . expr AR_METHOD_SIZE ( )
    (28) expr -> . expr AR_METHOD_SIZE ( expr )
    (29) expr -> . expr AR_METHOD_RESIZE ( arguments )
    (30) expr -> . variable [ expr ]
    (31) expr -> . variable [ expr ] = expr
    (32) expr -> . expr + expr
    (33) expr -> . expr - expr
    (34) expr -> . expr * expr
    (35) expr -> . expr / expr
    (36) expr -> . expr ASSIGN_ADD expr
    (37) expr -> . expr ASSIGN_SUB expr
    (38) expr -> . expr ASSIGN_MULT expr
    (39) expr -> . expr ASSIGN_DIV expr
    (40) expr -> . ( expr )
    (41) expr -> . expr COMP_EQU expr
    (42) expr -> . expr COMP_NEQU expr
    (43) expr -> . expr < expr
    (44) expr -> . expr COMP_LTE expr
    (45) expr -> . expr > expr
    (46) expr -> . expr COMP_GTE expr
    (47) expr -> . expr BOOL_AND expr
    (48) expr -> . expr BOOL_OR expr
    (49) expr -> . ! expr
    (50) expr -> . COMMAND_PRINT ( arguments )
    (53) expr -> . COMMAND_RANDOM ( expr )
    (54) expr -> . VAL_LITERAL
    (55) expr -> . - VAL_LITERAL
    (56) expr -> . CHAR_LITERAL
    (57) expr -> . variable
    (58) expr -> . - variable
    (59) expr -> . variable = expr
    (60) variable -> . ID

    [               shift and go to state 11
    STRING_LITERAL  shift and go to state 12
    (               shift and go to state 13
    !               shift and go to state 16
    COMMAND_PRINT   shift and go to state 17
    COMMAND_RANDOM  shift and go to state 18
    VAL_LITERAL     shift and go to state 19
    -               shift and go to state 15
    CHAR_LITERAL    shift and go to state 20
    ID              shift and go to state 22

    expr                           shift and go to state 58
    variable                       shift and go to state 14

state 17

    (50) expr -> COMMAND_PRINT . ( arguments )

    (               shift and go to state 59


state 18

    (53) expr -> COMMAND_RANDOM . ( expr )

    (               shift and go to state 60


state 19

    (54) expr -> VAL_LITERAL .

    ;               reduce using rule 54 (expr -> VAL_LITERAL .)
    AR_METHOD_SIZE  reduce using rule 54 (expr -> VAL_LITERAL .)
    AR_METHOD_RESIZE reduce using rule 54 (expr -> VAL_LITERAL .)
    +               reduce using rule 54 (expr -> VAL_LITERAL .)
    -               reduce using rule 54 (expr -> VAL_LITERAL .)
    *               reduce using rule 54 (expr -> VAL_LITERAL .)
    /               reduce using rule 54 (expr -> VAL_LITERAL .)
    ASSIGN_ADD      reduce using rule 54 (expr -> VAL_LITERAL .)
    ASSIGN_SUB      reduce using rule 54 (expr -> VAL_LITERAL .)
    ASSIGN_MULT     reduce using rule 54 (expr -> VAL_LITERAL .)
    ASSIGN_DIV      reduce using rule 54 (expr -> VAL_LITERAL .)
    COMP_EQU        reduce using rule 54 (expr -> VAL_LITERAL .)
    COMP_NEQU       reduce using rule 54 (expr -> VAL_LITERAL .)
    <               reduce using rule 54 (expr -> VAL_LITERAL .)
    COMP_LTE        reduce using rule 54 (expr -> VAL_LITERAL .)
    >               reduce using rule 54 (expr -> VAL_LITERAL .)
    COMP_GTE        reduce using rule 54 (expr -> VAL_LITERAL .)
    BOOL_AND        reduce using rule 54 (expr -> VAL_LITERAL .)
    BOOL_OR         reduce using rule 54 (expr -> VAL_LITERAL .)
    ]               reduce using rule 54 (expr -> VAL_LITERAL .)
    ,               reduce using rule 54 (expr -> VAL_LITERAL .)
    )               reduce using rule 54 (expr -> VAL_LITERAL .)


state 20

    (56) expr -> CHAR_LITERAL .

    ;               reduce using rule 56 (expr -> CHAR_LITERAL .)
    AR_METHOD_SIZE  reduce using rule 56 (expr -> CHAR_LITERAL .)
    AR_METHOD_RESIZE reduce using rule 56 (expr -> CHAR_LITERAL .)
    +               reduce using rule 56 (expr -> CHAR_LITERAL .)
    -               reduce using rule 56 (expr -> CHAR_LITERAL .)
    *               reduce using rule 56 (expr -> CHAR_LITERAL .)
    /               reduce using rule 56 (expr -> CHAR_LITERAL .)
    ASSIGN_ADD      reduce using rule 56 (expr -> CHAR_LITERAL .)
    ASSIGN_SUB      reduce using rule 56 (expr -> CHAR_LITERAL .)
    ASSIGN_MULT     reduce using rule 56 (expr -> CHAR_LITERAL .)
    ASSIGN_DIV      reduce using rule 56 (expr -> CHAR_LITERAL .)
    COMP_EQU        reduce using rule 56 (expr -> CHAR_LITERAL .)
    COMP_NEQU       reduce using rule 56 (expr -> CHAR_LITERAL .)
    <               reduce using rule 56 (expr -> CHAR_LITERAL .)
    COMP_LTE        reduce using rule 56 (expr -> CHAR_LITERAL .)
    >               reduce using rule 56 (expr -> CHAR_LITERAL .)
    COMP_GTE        reduce using rule 56 (expr -> CHAR_LITERAL .)
    BOOL_AND        reduce using rule 56 (expr -> CHAR_LITERAL .)
    BOOL_OR         reduce using rule 56 (expr -> CHAR_LITERAL .)
    ]               reduce using rule 56 (expr -> CHAR_LITERAL .)
    ,               reduce using rule 56 (expr -> CHAR_LITERAL .)
    )               reduce using rule 56 (expr -> CHAR_LITERAL .)


state 21

    (16) declaration -> TYPE . ID
    (17) declaration -> TYPE . ID = expr

    ID              shift and go to state 61


state 22

    (60) variable -> ID .
